Don't recommend current blog post (and fix blog dark mode)

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1295,7 +1295,7 @@ table td {
     .announcement-text {
         color: #fff;
         margin-top: 8px;
-        font-family: 'Gosha Sans';
+        font-family: 'Gosha Sans', sans-serif;
         font-size: 18px;
     }
 
