--- a/src/pages/styles/pricing.scss
+++ b/src/pages/styles/pricing.scss
@@ -6,7 +6,7 @@
     .p-title {
         font-size: 50px;
         font-weight: 500;
-        font-family: 'Good Sans';
+        font-family: 'Good Sans', sans-serif;
     }
 
     .p-text-primary {
